[package]
name = "alloc"
version = "0.0.0"
description = "alloc"
readme = "README.md"
keywords = ["esp-hal", "esp32"]
license = "MIT"
edition = "2024"

[features]
default = [
    "esp32c6",
    "jtag",
    "log",
    "alloc"
]

log = [
    "dep:log",
    "esp-hal/log-04",
    "esp-println/log-04",
    "esp-backtrace/println",
]

defmt = [
    "dep:defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-backtrace/defmt",
]

jtag = ["esp-println/jtag-serial"]
uart = ["esp-println/uart"]

esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-backtrace/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-println/esp32c6", "esp-backtrace/esp32c6"]

alloc = [
    "esp-alloc",
    "serde/alloc",
    "serde_json/alloc"
]

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["unstable"] }
esp-println = { version = "0.14.0", default-features = false, features = ["critical-section", "colors"] }
esp-backtrace = { version = "0.16.0", features = ["panic-handler", "exception-handler"]  }

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }

esp-alloc = { version = "0.8", optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }
