[package]
name = "embassy_blinky"
version = "0.0.0"
description = "embassy_blinky"
readme = "README.md"
keywords = ["esp-hal", "esp32"]
license = "MIT"
edition = "2021"
rust-version = "1.81"

[features]
default = [
    "esp32c6",
    "jtag",
    "log",
    "embassy"
]

log = [
    "dep:log",
    "esp-hal/log",
    "esp-println/log",
    "esp-backtrace/println",
    "embassy-executor?/log",
]

defmt = [
    "dep:defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-backtrace/defmt",
    "esp-hal-embassy?/defmt",
    "embassy-executor?/defmt",
]

jtag = ["esp-println/jtag-serial"]
uart = ["esp-println/uart"]

esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-println/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6"]

embassy = [
    "esp-hal-embassy",
    "embassy-executor",
    "embassy-time",
    "embassy-executor/task-arena-size-20480"
]

[dependencies]
esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
esp-println = { version = "0.13.1", default-features = false, features = ["critical-section", "colors"] }
esp-backtrace = { version = "0.15.1", features = ["panic-handler", "exception-handler"]  }

defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

esp-hal-embassy = { version = "0.7", optional = true  }
embassy-executor = { version = "0.7", package = "embassy-executor", features = ["arch-riscv32"], optional = true }
embassy-time = { version = "0.4", optional = true }
