[package]
name = "embassy_blinky"
version = "0.0.0"
description = "embassy_blinky"
readme = "README.md"
keywords = ["esp-hal", "esp32"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[features]
default = [
    "esp32c6",
    "jtag",
    "log",
    "embassy",
    "wifi",
]

log = [
    "dep:log",
    "esp-hal/log",
    "esp-println/log",
    "esp-backtrace/println",
    "embassy-executor?/log",
    "esp-wifi?/log",
]

defmt = [
    "dep:defmt",
    "esp-hal/defmt",
    "esp-println/defmt-espflash",
    "esp-backtrace/defmt",
    "embassy-executor?/defmt",
    "esp-wifi?/defmt",
    "embassy-net?/defmt"
]

jtag = ["esp-println/jtag-serial"]
uart = ["esp-println/uart"]

esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-backtrace/esp32c3", "esp-wifi?/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-println/esp32c6", "esp-backtrace/esp32c6", "esp-wifi?/esp32c6"]

embassy = [
    "esp-hal/embassy",
    "esp-hal/embassy-time-timg0",
    "embassy-executor",
    "embassy-time",
    "embassy-executor/task-arena-size-20480"
]

wifi = [
    "esp-wifi",
    "esp-wifi/embassy-net",
    "embassy-net",
]

[dependencies]
esp-hal = { version = "0.17.0" }
esp-println = { version = "0.9", default-features = false, features = ["critical-section", "colors"] }
esp-backtrace = { version = "0.11", features = ["panic-handler", "exception-handler"]  }

defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

embassy-executor = { version = "0.5", package = "embassy-executor",features = [
    "executor-thread", "integrated-timers", "arch-riscv32"], optional = true }
embassy-time = { version = "0.3", optional = true }

esp-wifi  = { version = "0.5", default-features = false, features = [
    "wifi", "ipv4", "tcp", "udp", "icmp", "igmp", "dns", "dhcpv4"], optional = true }
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }
